fetch data from firestore

--- a/src/app/components/artwork/artwork.component.html
+++ b/src/app/components/artwork/artwork.component.html
@@ -1,21 +1,4 @@
-<!-- 
-<ion-item lines="none">
-  <ion-thumbnail slot="start">
-    <img [src]="artwork?.image ? artwork.image : 'assets/images/art1.jpg'" alt="">
-  </ion-thumbnail>
-  <ion-label>
-    <h4>{{ artwork?.artist }}</h4>
-    <ion-text color="medium">
-      <p class="pStyle">{{ artwork?.title }}</p>
-      <p>Starting Bid: P{{ artwork?.startingBid }}</p>
-      <ion-text color="tertiary">
-        <p class="distance">Current Bid: {{ getHighestBid(artwork) }}</p>
-      </ion-text>
-    </ion-text>
-  </ion-label>
-</ion-item> -->
-
-<ion-item lines="none">
+<ion-item *ngFor="let artwork of artwork" lines="none">
   <ion-thumbnail slot="start">
     <img
       [src]="artwork?.image ? artwork.image : 'assets/images/art1.jpg'"
@@ -28,14 +11,14 @@
         <h4>{{ getData(artwork?.artistID) }}</h4>
         <ion-text color="medium">
           <p class="pStyle">{{ artwork?.title }}</p>
-    
-          <ng-container *ngIf="isAuction(); else fixedPriceContent">
+
+          <ng-container *ngIf="isAuction(artwork)">
             <p>Starting Bid: P{{ artwork?.price }}</p>
             <ion-text color="tertiary">
               <p class="distance">Current Bid: {{ getHighestBid(artwork) }}</p>
             </ion-text>
           </ng-container>
-    
+
           <ng-template #fixedPriceContent>
             <ion-row>
               <ion-col>
@@ -49,5 +32,4 @@
       </ion-label>
     </ion-col>
   </ion-row>
-
 </ion-item>
