--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -1,42 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  
-  <div *ngIf="isLoading"><ion-skeleton-text animated style="height: 25vh;"></ion-skeleton-text></div>
+  <div *ngIf="isLoading">
+    <ion-skeleton-text animated style="height: 25vh"></ion-skeleton-text>
+  </div>
   <app-loading-artwork *ngIf="isLoading"></app-loading-artwork>
 
   <app-banner *ngIf="!isLoading" [bannerImages]="banners"></app-banner>
-
-
-
-
-
-
-
-
-
-  <!-- <ion-list *ngIf="!isLoading">
-    <ion-list-header class="ion-margin-bottom">
-      <ion-label>
-        <h4>Auction</h4>
-        <p>Discover ongoing auctions</p>
-      </ion-label>
-      <ion-button color="dark" vertical-align-center (click)="navigateToAuction('current')">
-        See All <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
-      </ion-button>
-    </ion-list-header>
-    <ion-item-group *ngIf="artworks?.length > 0">
-      <app-artwork 
-        *ngFor="let artwork of artworks" 
-        [artwork]="artwork" 
-        [routerLink]="['/', 'tabs', 'artwork-detail', artwork.uid]"></app-artwork>
-    </ion-item-group>
-
-  </ion-list> -->
 
   <ion-list *ngIf="!isLoading">
     <ion-list-header class="ion-margin-bottom">
@@ -56,14 +24,11 @@
     <ion-item-group *ngIf="auctionArtworks.length > 0">
       <app-artwork
         *ngFor="let artwork of auctionArtworks"
-        [artwork]="artwork"
-        [routerLink]="['/', 'tabs', 'artwork-detail', artwork.artworkID]"
-      >
-      </app-artwork>
+        [artworks]="artwork"
+      ></app-artwork>
     </ion-item-group>
   </ion-list>
 
-  <!-- Fixed Price Section -->
   <ion-list *ngIf="!isLoading">
     <ion-list-header class="ion-margin-bottom">
       <ion-label>
@@ -75,28 +40,8 @@
     <ion-item-group *ngIf="fixedPriceArtworks.length > 0">
       <app-artwork
         *ngFor="let artwork of fixedPriceArtworks"
-        [artwork]="artwork"
-        [routerLink]="['/', 'tabs', 'artwork-detail', artwork.artworkID]"
+        [artworks]="artwork"
       ></app-artwork>
-    </ion-item-group>
-  </ion-list>
-
-
-  <ion-list>
-    <ion-list-header>
-      <ion-label>
-        <ion-text>Artists For You</ion-text>
-      </ion-label>
-      <ion-button color="dark" vertical-align-center (click)="navigateToBrowse('artist')">
-        View All <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
-      </ion-button>
-    </ion-list-header>
-    <ion-item-group *ngIf="artists.length > 0">
-      <app-artists
-        *ngFor="let artist of artists"
-        [artist]="artist"
-        [routerLink]="['/', 'tabs', 'artist-profile', artist.artistID]"
-      ></app-artists>
     </ion-item-group>
   </ion-list>
 </ion-content>
