--- a/src/app/components/artwork/artwork.component.html
+++ b/src/app/components/artwork/artwork.component.html
@@ -1,4 +1,4 @@
-<ion-item *ngIf="artwork" lines="none">
+<ion-item *ngIf="artwork" lines="none" (click)="onArtworkClick()">
   <ion-thumbnail slot="start">
     <img
       [src]="artwork?.image ? artwork.image : 'assets/images/art1.jpg'"
