--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -25,7 +25,7 @@
       <app-artwork
         *ngFor="let artwork of auctionArtworks"
         [artwork]="artwork"
-        (click)="openArtwork(artwork)"
+        [routerLink]="['/', 'tabs', 'artwork-detail', artwork.artworkID]"
       ></app-artwork>
     </ion-item-group>
   </ion-list>
