--- a/src/app/components/auction-upcoming/auction-upcoming.component.html
+++ b/src/app/components/auction-upcoming/auction-upcoming.component.html
@@ -1,4 +1,4 @@
-<!-- <ion-item lines="none">
+<ion-item lines="none">
   <ion-thumbnail slot="start">
     <img
       [src]="artwork?.image ? artwork.image : 'assets/images/art1.jpg'"
@@ -6,28 +6,12 @@
     />
   </ion-thumbnail>
   <ion-label>
-    <h4>{{ artwork?.artist }}</h4>
+    <h4>{{ getData(artwork?.artistID) }}</h4>
     <ion-text color="medium">
       <p class="pStyle">{{ artwork?.title }}</p>
-      <p>Starting Bid: P{{ artwork?.startingBid }}</p>
+      <p>Starting Bid: P{{ artwork?.price }}</p>
       <ion-text color="tertiary">
-        <p class="distance">Current Bid: {{ getHighestBid() }}</p>
-      </ion-text>
-    </ion-text>
-  </ion-label>
-</ion-item> -->
-
-<ion-item lines="none">
-  <ion-thumbnail slot="start">
-    <img [src]="artwork?.image ? artwork.image : 'assets/images/art1.jpg'" alt="">
-  </ion-thumbnail>
-  <ion-label>
-    <h4>{{ artwork?.artist }}</h4>
-    <ion-text color="medium">
-      <p class="pStyle">{{ artwork?.title }}</p>
-      <p>Starting Bid: P{{ artwork?.startingBid }}</p>
-      <ion-text color="tertiary">
-        <p class="distance">Current Bid: {{ getHighestBid() }}</p>
+        <p class="distance">Current Bid: {{ getHighestBid(artwork) }}</p>
       </ion-text>
     </ion-text>
   </ion-label>
